[package]
name = "rudder"
version = "0.1.0"
authors = ["Ramon Huidobro <hola@ramonh.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.14" }
reqwest = { version = "0.10.4", features = ["blocking"] }
atom_syndication = "0.8.0"
dialoguer = "0.6.2"
