[package]
name = "rudder"
version = "0.0.2"
authors = ["Ramon Huidobro <hola@ramonh.dev>"]
edition = "2018"
license = "MIT"
license_file = "LICENSE"
description = "A tool to read blogs in the terminal"
readme = "README.md"
homepage = "https://github.com/ramonh/rudder"
repository = "https://github.com/ramonh/rudder"
keywords = ["cli", "blog", "rss"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.14" }
reqwest = { version = "0.10.4", features = ["blocking"] }
atom_syndication = "0.9.0"
dialoguer = "0.6.2"
rss = "1.0"
html2md = "0.2.10"
crossterm = "0.17.7"
termimad = "0.8.26"
